k8s/edgex-core-metadata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-core-metadata
  labels:
    app.kubernetes.io/app: edgex-core-metadata
    app.kubernetes.io/instance: edgex
    app.kubernetes.io/version: 1.2.1
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: edgex-foundry
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: edgex-1.2.1

spec:
  type: NodePort
  selector:
    app.kubernetes.io/app: edgex-core-metadata
    app.kubernetes.io/instance: edgex
    app.kubernetes.io/version: 1.2.1
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: edgex-foundry
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: edgex-1.2.1

  ports:
  - port: 48081
    name: "port-48081"
    nodePort: 30801
