k8s/edgex-core-metadata/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app.root: /edgex-core-metadata
  name: edgex-core-metadata
  labels:
    app.kubernetes.io/app: edgex-core-metadata
    app.kubernetes.io/instance: edgex
    app.kubernetes.io/version: 1.2.0
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: edgex-foundry
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: edgex-1.2.0

spec:
  rules:
  - host: metadata.edgex.com
    http:
      paths:
      - path: /
        backend:
          serviceName: edgex-core-metadata
          servicePort: 48081
